# WebServer

./: CMakeLists.txt  main.cpp
include/: config.h  myhttp.h  request.h  server.h
resource/: 404.html  Cefixime.html  Hello_World.html  SML.html  index.html
resource/Hello_World_files/: qrcode
resource/SML_files/: qrcode
src/: config.cpp  myhttp.cpp  request.cpp  server.cpp
